<resources>
    <string name="app_name">定位4单兵（测向）app</string>
    <string name="app_name_b">G25(白)</string>
    <string name="app_predator">G10(单兵)</string>
    <string name="version">版本信息</string>
    <string name="warning">警告</string>
    <string name="exit">退出</string>
    <string name="back">返回</string>
    <string name="ok">确定</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="label">标签</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="reset">重置</string>
    <string name="complete">完成</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="search">搜索</string>
    <string name="query">查询</string>
    <string name="login">登录</string>
    <string name="time_offset">时偏(GPS)</string>
    <string name="list_empty">数据列表为空</string>
    <string name="gps_sync_state">GPS状态：</string>
    <string name="air_sync_state">空口状态：</string>
    <string name="board_ip">单板IP：</string>
    <string name="arfcn">频点：</string>
    <string name="device">定位设备：</string>
    <string name="device_bx">便携</string>
    <string name="device_cz">车载</string>
    <string name="battery">电量：</string>
    <string name="temperature">温度：</string>
    <string name="ed_ul_slot_index1">上行时域位置1&#058;</string>
    <string name="ed_ul_slot_index2">上行时域位置2&#058;</string>
    <string name="ed_ul_rb_offset">上行频域位置&#058;</string>
    <string name="ed_smooth_win_len">smooth_win_len&#058;</string>
    <string name="ed_par_cfg">目标功率域值&#058;</string>
    <string name="enable_vehicle">使能车载设备</string>
    <string name="state_scan_ing">正在获取最优上行频域位置...</string>
    <string name="state_scan_succ">最优上行频域位置: %d(%d)\n点击“启动单兵”开始工作</string>
    <string name="state_scan_fail">获取最优上行频域位置失败，再来一次</string>
    <string name="scan_best_postion">获取最优上行频域位置</string>
    <string name="start_jam">开始干扰</string>
    <string name="stop_jam">结束干扰</string>
    <string name="bs_get_jam">查询自启动参数</string>
    <string name="bs_id_cfg">蓝牙列表</string>
    <string name="ed_ssid">名称&#058;</string>
    <string name="ed_psw">密码&#058;</string>
    <string name="confirm_start_jam">确定开始工作？</string>
    <string name="title_sg_jam">参数配置</string>
    <string name="tx_atten">增益</string>
    <string name="lo_frequency">频率</string>
    <string name="sg_type">类型</string>
    <string name="exit_app_confirm">退出应用？</string>
    <string name="ed_user">用户名&#058;</string>
    <string name="trace">开启定位</string>
    <string name="trace_4g">4G定位</string>
    <string name="catch_list">侦码列表</string>
    <string name="freq_scan">开启扫频</string>
    <string name="freq_scan_4g">4G扫频</string>
    <string name="state">状态:</string>
    <string name="gps_state">GPS</string>
    <string name="air_state">空口</string>
    <string name="bar_chart">柱状图</string>
    <string name="freq_scan_list">扫频列表</string>
    <string name="imsi">imsi</string>
    <string name="pci">pci</string>
    <string name="tv_tac">TAC</string>
    <string name="tv_nci">NCI</string>
    <string name="tv_arfcn">ARFCN</string>
    <string name="tv_pci">PCI</string>
    <string name="tv_rx">RX</string>
    <string name="tv_act">Act.</string>
    <string name="tv_import">导入</string>
    <string name="trace_cfg">定位配置</string>
    <string name="cell_1">小区一</string>
    <string name="cell_2">小区二</string>
    <string name="ed_arfcn">频点</string>
    <string name="ed_pci">pci</string>
    <string name="ue_max_power">UE最大发射功率：</string>
    <string name="black_list">黑名单列表</string>
    <string name="error_gps_not_suc">GPS未同步</string>
    <string name="state_stop_trace">结束定位中</string>
    <string name="bs_version">基带版本</string>
    <string name="predator">测向</string>
    <string name="state_prepared">设备准备就绪</string>
    <string name="state_preparing">设备准备中</string>
    <string name="error_imsi">IMSI数据错误,正确值为：15位数字。</string>
    <string name="pci_null">PCI数据不能为空</string>
    <string name="error_pci">PCI数据错误,取值范围：0~1007。</string>
    <string name="config_dw_info">配置频点参数</string>
    <string name="config_dw_blacklist">配置黑名单</string>
    <string name="config_dw_txpwr">配置功率衰减</string>
    <string name="config_dw_start_trace">启动定位</string>
    <string name="config_dw_trace">定位中</string>
    <string name="stop">结束</string>
    <string name="OAM_ACK_E_PARAM">指令配置失败参数异常</string>
    <string name="OAM_ACK_E_BUSY">指令配置失败系统忙</string>
    <string name="OAM_ACK_E_TRANSFER">指令配置失败传输异常</string>
    <string name="OAM_ACK_E_SYS_STATE">指令配置失败系统状态异常</string>
    <string name="OAM_ACK_E_HW_CFG_FAIL">指令配置硬件配置异常</string>
    <string name="OAM_ACK_E_ASYNC_FAIL">空口同步失败</string>
    <string name="OAM_ACK_E_GPS_UNLOCK">GPS同步失败</string>
    <string name="OAM_ACK_ERROR">指令配置失败</string>
    <string name="known">知道了</string>
    <string name="reminder">提示</string>
    <string name="stop_trace">结束定位</string>
    <string name="work_state">工作状态</string>
    <string name="state_pwr_on">设备开机中</string>
    <string name="start_pwr_detect">启动单兵</string>
    <string name="bs_upgrade">基带升级</string>
    <string name="txpwr_cfg">增益配置</string>
    <string name="set_gpio">配置gpio</string>
    <string name="data_transmission">数据传输</string>
    <string name="time_offset_cfg">城市时偏</string>
    <string name="add_arfcn">增加工作频点</string>
    <string name="search_arfcn">查询频点配置</string>
    <string name="bs_log">读取基带日志</string>
    <string name="bs_reboot">重启基带</string>
    <string name="set_bt_name">设置蓝牙名称</string>
    <string name="wifi_config">配置wifi</string>
    <string name="black_box">读取黑匣子</string>
    <string name="device_id">设备id：</string>
    <string name="tv_ip">ip：</string>
    <string name="check_device">选择设备</string>
    <string name="scan_arfcn_list">扫频结果</string>
    <string name="set_mode">设置工作模式</string>
    <string name="rb_mode">工作模式</string>
    <string name="rb_dual">双小区</string>
    <string name="rb_single">单小区</string>
    <string name="input_file_name">请输入文件名</string>
    <string name="error_file_name">文件名格式错误</string>
    <string name="rb_cell_0">小区一</string>
    <string name="rb_cell_1">小区二</string>
    <string name="op_log">读取黑匣子</string>
    <string name="scan_gps">GPS扫频</string>
    <string name="scan_air">空口扫频</string>
    <string name="file_name">文件名</string>
    <string name="state_ready">准备就绪</string>
    <string name="state_set_time_fail">时间配置失败</string>
    <string name="state_rebooting">设备重启中</string>
    <string name="state_rebooting_fail">设备重启失败</string>
    <string name="state_get_version_fail">读取基带版本失败</string>
    <string name="copy_log_file">正在从基带拷贝LOG文件</string>
    <string name="get_log_fail">设备LOG信息获取失败，请重试</string>
    <string name="state_set_bt_name_fail">蓝牙名称修改失败</string>
    <string name="state_set_wifi_fail">wifi名称修改失败</string>
    <string name="state_rx_gain_fail">增益配置失败</string>
    <string name="state_start_pwr_detect_succ">单兵工作中</string>
    <string name="state_start_pwr_detect_fail">启动单兵失败</string>
    <string name="state_stop_pwr_detect_fail">关闭单兵失败</string>
    <string name="state_upgrade_succ">升级成功,重启中</string>
    <string name="state_upgrade_fail">基带升级失败</string>
    <string name="state_bt_connecting">蓝牙连接中</string>
    <string name="state_bt_fail">蓝牙连接失败</string>
    <string name="state_bt_disconnected">蓝牙已断开</string>
    <string name="rb_far">标准</string>
    <string name="rb_mid">中距</string>
    <string name="rb_near">近距</string>
    <string name="state_busing">设备忙，稍后再试</string>
    <string name="error_arfcn">ARFCN数据错误，请检查。</string>
    <string name="error_ul_rb_offset">上行频域位置取值范围错误。</string>
    <string name="error_ul_solt_index">上行时域位置取值范围错误</string>
    <string name="error_smooth_win_len">smooth_win_len取值错误。</string>
    <string name="error_prb_num">prb_num值不能为空</string>
    <string name="state_start_pwr_detect">正在启动单兵</string>
    <string name="stop_pwr_detect">关闭单兵</string>
    <string name="error_ul_period">调度周期取值范围错误</string>
    <string name="confirm_stop_jam">确定结束工作？</string>
    <string name="tips">提示</string>
    <string name="delete_confirm">确定删除？</string>
    <string name="error_city">城市名称不能为空。</string>
    <string name="error_timie_offset">时偏不能为空。</string>
    <string name="error_same_city">时偏参数已更新</string>
    <string name="arfcn_not_cfg">只需配置N28,N41,N79的时偏</string>
    <string name="delete_city_confirm">确定删除: %s</string>
    <string name="set_city_confirm">确定设置: %s 为当前城市</string>
    <string name="arfcn_add_ok">频点: %d 已添加</string>
    <string name="error_same_arfcn">该频点已配置。</string>
    <string name="arfcn_delete_ok">频点: %d 已删除</string>
    <string name="arfcn_delete_fail">频点: %d 删除失败，请确认是否有此频点</string>
    <string name="error_empty">参数不能为空</string>
    <string name="error_device">设备名称不能为空</string>
    <string name="error_ssid">WIFI名称不能为空</string>
    <string name="error_psw">密码不能为空</string>
    <string name="file_list_empty">文件列表为空</string>
    <string name="confirm_start_upgrade">确定升级基带版本到: %s</string>
    <string name="state_upgrade_copying_file">升级文件拷贝中</string>
    <string name="error_log_name">LOG文件名称长度不能超过35个byte</string>
    <string name="state_get_log">正在读取设备LOG信息</string>
    <string name="reboot_device">确认重启设备?</string>
    <string name="data_length_error">数据长度超长</string>
    <string name="add_or_modified_city">添加或修改频点时偏</string>
    <string name="del_arfcn_desc">删除仅配置频点即可</string>
    <string name="arfcn_cfg">频点配置</string>
    <string name="ed_time_offset">时偏:</string>
    <string name="save_data">保存数据</string>
    <string name="file_path">文件路径&#058;</string>
    <string name="bt_list">蓝牙列表</string>
    <string name="arfcn_list">频点列表</string>
    <string name="device_name">设备名称</string>
    <string name="input_device_name">请输入设备名称&#058;</string>
    <string name="orx_list">空口频点:</string>
    <string name="ssb_tx1">TX#1(2.1|2.6)</string>
    <string name="ssb_tx2">TX#2(700|3.5|4.9)</string>
    <string name="state_stop">结束工作</string>
    <string name="state_scp_connect_fail">SCP连接失败，请检查WIFI网络</string>
    <string name="state_start_jam">正在开启干扰</string>
    <string name="state_start_jam_succ">干扰中</string>
    <string name="state_get_jam_para">读取自启动干扰参数</string>
    <string name="state_start_jam_fail">自启动干扰失败</string>
    <string name="state_stop_jam_fail">结束干扰失败</string>
    <string name="state_tracing">定位中，请先结束定位</string>
    <string name="error_not_pwr_detect">仅单兵工作中，方可配置</string>
    <string name="state_upgrade_copying_file_fail">升级文件拷贝中失败，请重试</string>
    <string name="state_upgrade_ing">基带升级中</string>
    <string name="reboot">重启基带</string>
    <string name="rebooting">设备重启中，请稍后再试</string>
    <string name="get_log_success">设备LOG信息获取完成，请到"文件管理—NR5G--日志与升级"中获取</string>
    <string name="get_op_log_success">设备LOG信息获取完成，请到"文件管理—NR5G--黑匣子"中获取</string>
    <string name="default_file_name">默认为当前日期</string>
    <string name="desc_city">城市(如：697*1000 = 697000)</string>
    <string name="format_time_offset">数据格式：697*1000 = 697000</string>
    <string name="city">城市</string>
    <string name="city_list">城市列表</string>
    <string name="add_city">添加城市</string>
    <string name="ed_city">城市&#058;</string>
    <string name="title_city">城市</string>
    <string name="set_as_cur_city">设为当前城市</string>
    <string name="delete_city">删除城市信息</string>
    <string name="input_city">请输城市名&#058;</string>
    <string name="error_lo_frequency">频率数据错误，请检查。</string>
    <string name="error_tx_atten">PCI取值范围：0~30。</string>
    <string name="error_sg_type">sg_type：0-WhiteNoise_100MHz, 1-Tone_10MHz。</string>
    <string name="error_arfcn_not_support">暂不支持该频点，请与产家联系解决。</string>
    <string name="error_must_same_band">N41|N78|N79单通道必须配置同频段频点。</string>
    <string name="error_band_must_n1_n28">此通道配置的5G频点频段必须为N1|N28。</string>
    <string name="error_max_arfcn">最多只能配置: %d 个频点</string>
    <string name="error_no_support_lte">暂不支持干扰LTE频点</string>
    <string name="error_empty_ssb">频点列表为空</string>
    <string name="error_tx1_ssb">TX1 频点数据有误，可能超带宽，5G频点最大允许带宽：200MHz,4G频点最大允许带宽：100MHz</string>
</resources>