<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/title_city"
        android:textColor="@color/title_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_set_as_cur_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/set_as_cur_city"
        android:textColor="@color/main_text_color"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/tv_delete_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/delete_city"
        android:textColor="@color/main_text_color"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/tv_add_arfcn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/add_or_modified_city"
        android:textColor="@color/main_text_color"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/cancel"
        android:textColor="@color/main_text_color"
        android:textSize="18sp" />

</LinearLayout>