<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C1EBF4"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/predator"
            android:textSize="18sp" />
        <ImageView
            android:id="@+id/iv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/title_bar"
            android:src="@mipmap/icon_temperaturel"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="00.00"
            android:textColor="@color/color_333333"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/iv_temp"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <com.simdo.dw_4db_s.DrawBatteryView
            android:id="@+id/battery_view"
            android:layout_width="24dp"
            android:layout_height="12dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toEndOf="@id/tv_temp" />

        <TextView
            android:id="@+id/battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/color_333333"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toEndOf="@id/battery_view"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/tv_value_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="0"
            android:textColor="@color/trace_value"
            app:layout_constraintTop_toBottomOf="@+id/battery"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tv_value_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="0"
            android:textColor="@color/trace_value"
            android:textSize="40sp"
            android:layout_marginEnd="230dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/battery" />

        <TextView
            android:id="@+id/tv_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="#FDCD4E"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="失步" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/color_333333"
            app:layout_constraintEnd_toStartOf="@+id/tv_gps"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginEnd="10dp"
            android:text="@string/gps_state" />
        <TextView
            android:id="@+id/tv_air_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="#FDCD4E"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_gps"
            tools:text="失步" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/air_state"
            android:textColor="@color/color_333333"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_air_sync"
            app:layout_constraintTop_toBottomOf="@+id/tv_gps" />
        <TextView
            android:id="@+id/ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#FDCD4E"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_air_sync"
            />


        <TextView
            android:id="@+id/tv_arfcn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/color_333333"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_value_first"
            android:text="@string/arfcn"
            />
        <TextView
            android:id="@+id/arfcn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/color_333333"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/tv_arfcn"
            app:layout_constraintTop_toBottomOf="@+id/tv_value_first"
            android:text=""
            />
        <TextView
            android:id="@+id/tv_pci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/color_333333"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/arfcn"
            app:layout_constraintTop_toBottomOf="@+id/tv_value_first"
            android:text="@string/pci"
            />
        <TextView
            android:id="@+id/pci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/color_333333"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/tv_pci"
            app:layout_constraintTop_toBottomOf="@+id/tv_value_first"
            android:text=""
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/work_state"
            android:textColor="@color/color_333333"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_value_first"
            app:layout_constraintTop_toBottomOf="@+id/tv_arfcn" />

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:text="@string/state_pwr_on"
            android:textColor="@color/state_text_color"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/tv_arfcn" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_state">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_pwr_detect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_bgl"
                    android:text="@string/start_pwr_detect"
                    android:textColor="@color/btn_text"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_rx_gain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_bgl"
                    android:text="@string/txpwr_cfg"
                    android:textColor="@color/btn_text"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_set_gpio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_bgl"
                    android:text="@string/set_gpio"
                    android:textColor="@color/btn_text"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_time_offset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_bgl"
                    android:text="@string/time_offset_cfg"
                    android:textColor="@color/btn_text"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_add_arfcn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_bgl"
                    android:text="@string/add_arfcn"
                    android:textColor="@color/btn_text"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_bt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_bgl"
                    android:text="@string/set_bt_name"
                    android:textColor="@color/btn_text"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_wifi_cfg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_bgl"
                    android:text="@string/wifi_config"
                    android:textColor="@color/btn_text"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_bgl"
                    android:text="@string/bs_version"
                    android:textColor="@color/btn_text"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_upgrade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_bgl"
                    android:text="@string/bs_upgrade"
                    android:textColor="@color/btn_text"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_data_transmission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_bgl"
                    android:text="@string/data_transmission"
                    android:textColor="@color/btn_text"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_search_arfcn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_bgl"
                    android:text="@string/search_arfcn"
                    android:textColor="@color/btn_text"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_bgl"
                    android:text="@string/bs_log"
                    android:textColor="@color/btn_text"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_reboot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_bgl"
                    android:text="@string/bs_reboot"
                    android:textColor="@color/btn_text"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>